<resources>
    <string name="think">Put Number</string>
    <string name="plusminus">+/-</string>
    <string name="app_name">AndroidCalculator Project</string>
    <string name="C">C</string>
    <string name="AC">AC</string>
    <string name="Divide">/</string>
    <string name="Multi">x</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
</resources>